infrastructure/cdk.out/MyResumeClusterStack.template.json
{
 "Resources": {
  "myresume2B92AB2D": {
   "Type": "AWS::S3::Bucket",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume/Resource"
   }
  },
  "myresumevpcEC96B592": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/Resource"
   }
  },
  "myresumevpcPublicSubnet1Subnet3498E53E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1/Subnet"
   }
  },
  "myresumevpcPublicSubnet1RouteTable2953C14E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1/RouteTable"
   }
  },
  "myresumevpcPublicSubnet1RouteTableAssociation84A2FE76": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPublicSubnet1RouteTable2953C14E"
    },
    "SubnetId": {
     "Ref": "myresumevpcPublicSubnet1Subnet3498E53E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "myresumevpcPublicSubnet1DefaultRoute66D09027": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPublicSubnet1RouteTable2953C14E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "myresumevpcIGW8D7A2B56"
    }
   },
   "DependsOn": [
    "myresumevpcVPCGWC5AC1DFF"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "myresumevpcPublicSubnet1EIP00DBEAA3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1/EIP"
   }
  },
  "myresumevpcPublicSubnet1NATGateway06A2E140": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "myresumevpcPublicSubnet1Subnet3498E53E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "myresumevpcPublicSubnet1EIP00DBEAA3",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "myresumevpcPublicSubnet1DefaultRoute66D09027",
    "myresumevpcPublicSubnet1RouteTableAssociation84A2FE76"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet1/NATGateway"
   }
  },
  "myresumevpcPublicSubnet2SubnetF1BD9B3C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2/Subnet"
   }
  },
  "myresumevpcPublicSubnet2RouteTable06C3AC3B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2/RouteTable"
   }
  },
  "myresumevpcPublicSubnet2RouteTableAssociation7CD86F83": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPublicSubnet2RouteTable06C3AC3B"
    },
    "SubnetId": {
     "Ref": "myresumevpcPublicSubnet2SubnetF1BD9B3C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "myresumevpcPublicSubnet2DefaultRouteEA6EB63D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPublicSubnet2RouteTable06C3AC3B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "myresumevpcIGW8D7A2B56"
    }
   },
   "DependsOn": [
    "myresumevpcVPCGWC5AC1DFF"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "myresumevpcPublicSubnet2EIP4AF858CA": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2/EIP"
   }
  },
  "myresumevpcPublicSubnet2NATGateway593831F5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "myresumevpcPublicSubnet2SubnetF1BD9B3C"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "myresumevpcPublicSubnet2EIP4AF858CA",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "myresumevpcPublicSubnet2DefaultRouteEA6EB63D",
    "myresumevpcPublicSubnet2RouteTableAssociation7CD86F83"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PublicSubnet2/NATGateway"
   }
  },
  "myresumevpcPrivateSubnet1Subnet35DBE262": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet1/Subnet"
   }
  },
  "myresumevpcPrivateSubnet1RouteTableA156AB08": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet1/RouteTable"
   }
  },
  "myresumevpcPrivateSubnet1RouteTableAssociation3F219C3C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPrivateSubnet1RouteTableA156AB08"
    },
    "SubnetId": {
     "Ref": "myresumevpcPrivateSubnet1Subnet35DBE262"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "myresumevpcPrivateSubnet1DefaultRouteDB774FC4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPrivateSubnet1RouteTableA156AB08"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "myresumevpcPublicSubnet1NATGateway06A2E140"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "myresumevpcPrivateSubnet2SubnetC5A21F95": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet2/Subnet"
   }
  },
  "myresumevpcPrivateSubnet2RouteTable9724BCB6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet2/RouteTable"
   }
  },
  "myresumevpcPrivateSubnet2RouteTableAssociation11BB7174": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPrivateSubnet2RouteTable9724BCB6"
    },
    "SubnetId": {
     "Ref": "myresumevpcPrivateSubnet2SubnetC5A21F95"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "myresumevpcPrivateSubnet2DefaultRoute818605F7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "myresumevpcPrivateSubnet2RouteTable9724BCB6"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "myresumevpcPublicSubnet2NATGateway593831F5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "myresumevpcIGW8D7A2B56": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyResumeClusterStack/my-resume-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/IGW"
   }
  },
  "myresumevpcVPCGWC5AC1DFF": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    },
    "InternetGatewayId": {
     "Ref": "myresumevpcIGW8D7A2B56"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/VPCGW"
   }
  },
  "myresumevpcRestrictDefaultSecurityGroupCustomResource94EA0B36": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "myresumevpcEC96B592",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/my-resume-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "myresumevpcEC96B592",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "MyResumeCluster88B978B4": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeCluster/Resource"
   }
  },
  "MyResumeExecutionRole70902745": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeExecutionRole/Resource"
   }
  },
  "MyResumeExecutionRoleDefaultPolicyEAD18C4F": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetAuthorizationToken",
        "ecr:GetDownloadUrlForLayer",
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ResumeLogGroup9C06334A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MyResumeExecutionRoleDefaultPolicyEAD18C4F",
    "Roles": [
     {
      "Ref": "MyResumeExecutionRole70902745"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeExecutionRole/DefaultPolicy/Resource"
   }
  },
  "MyResumeTaskRoleE50E3365": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeTaskRole/Resource"
   }
  },
  "MyResumeTaskRoleDefaultPolicy473739CA": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MyLogGroup5C0DAD85",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "myresume2B92AB2D",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "myresume2B92AB2D",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MyResumeTaskRoleDefaultPolicy473739CA",
    "Roles": [
     {
      "Ref": "MyResumeTaskRoleE50E3365"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeTaskRole/DefaultPolicy/Resource"
   }
  },
  "MyLogGroup5C0DAD85": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyLogGroup/Resource"
   }
  },
  "ResumeLogGroup9C06334A": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/ResumeLogGroup/Resource"
   }
  },
  "MyResumeServiceLB4AFC292B": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "MyResumeServiceLBSecurityGroupC7DF1EF4",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "myresumevpcPublicSubnet1Subnet3498E53E"
     },
     {
      "Ref": "myresumevpcPublicSubnet2SubnetF1BD9B3C"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "myresumevpcPublicSubnet1DefaultRoute66D09027",
    "myresumevpcPublicSubnet1RouteTableAssociation84A2FE76",
    "myresumevpcPublicSubnet2DefaultRouteEA6EB63D",
    "myresumevpcPublicSubnet2RouteTableAssociation7CD86F83"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/LB/Resource"
   }
  },
  "MyResumeServiceLBSecurityGroupC7DF1EF4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB MyResumeClusterStackMyResumeServiceLB7A420096",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/LB/SecurityGroup/Resource"
   }
  },
  "MyResumeServiceLBSecurityGrouptoMyResumeClusterStackMyResumeServiceSecurityGroupD4BB9B3D5050CA04EE9D": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "MyResumeServiceLBSecurityGroupC7DF1EF4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "MyResumeServiceSecurityGroupF2E2EAB7",
      "GroupId"
     ]
    },
    "FromPort": 5050,
    "ToPort": 5050
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/LB/SecurityGroup/to MyResumeClusterStackMyResumeServiceSecurityGroupD4BB9B3D:5050"
   }
  },
  "MyResumeServiceLBPublicListener114913CD": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "MyResumeServiceLBPublicListenerECSGroup98466648"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "MyResumeServiceLB4AFC292B"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/LB/PublicListener/Resource"
   }
  },
  "MyResumeServiceLBPublicListenerECSGroup98466648": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/health",
    "HealthCheckTimeoutSeconds": 5,
    "HealthyThresholdCount": 2,
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "UnhealthyThresholdCount": 2,
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "MyResumeServiceTaskDef50E9C1F2": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "OPENAI_API_KEY",
        "Value": {
         "Ref": "ParamParameter"
        }
       },
       {
        "Name": "BOKEH_ALLOW_WS_ORIGIN",
        "Value": {
         "Fn::GetAtt": [
          "MyResumeServiceLB4AFC292B",
          "DNSName"
         ]
        }
       }
      ],
      "Essential": true,
      "Image": "257033485100.dkr.ecr.ap-southeast-2.amazonaws.com/resume-chat:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ResumeLogGroup9C06334A"
        },
        "awslogs-stream-prefix": "WebServiceContainer",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 5050,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "2048",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "MyResumeExecutionRole70902745",
      "Arn"
     ]
    },
    "Family": "MyResumeClusterStackMyResumeServiceTaskDefE446A1A8",
    "Memory": "4096",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "MyResumeTaskRoleE50E3365",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/TaskDef/Resource"
   }
  },
  "MyResumeService33CEBB3C": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MyResumeCluster88B978B4"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 5050,
      "TargetGroupArn": {
       "Ref": "MyResumeServiceLBPublicListenerECSGroup98466648"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "MyResumeServiceSecurityGroupF2E2EAB7",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "myresumevpcPrivateSubnet1Subnet35DBE262"
       },
       {
        "Ref": "myresumevpcPrivateSubnet2SubnetC5A21F95"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "MyResumeServiceTaskDef50E9C1F2"
    }
   },
   "DependsOn": [
    "MyResumeServiceLBPublicListenerECSGroup98466648",
    "MyResumeServiceLBPublicListener114913CD",
    "MyResumeTaskRoleDefaultPolicy473739CA",
    "MyResumeTaskRoleE50E3365"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/Service/Service"
   }
  },
  "MyResumeServiceSecurityGroupF2E2EAB7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MyResumeClusterStack/MyResumeService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:5050",
      "FromPort": 5050,
      "IpProtocol": "tcp",
      "ToPort": 5050
     }
    ],
    "VpcId": {
     "Ref": "myresumevpcEC96B592"
    }
   },
   "DependsOn": [
    "MyResumeTaskRoleDefaultPolicy473739CA",
    "MyResumeTaskRoleE50E3365"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/Service/SecurityGroup/Resource"
   }
  },
  "MyResumeServiceSecurityGroupfromMyResumeClusterStackMyResumeServiceLBSecurityGroupA23F9B2F505070EC6F68": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 5050,
    "GroupId": {
     "Fn::GetAtt": [
      "MyResumeServiceSecurityGroupF2E2EAB7",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MyResumeServiceLBSecurityGroupC7DF1EF4",
      "GroupId"
     ]
    },
    "ToPort": 5050
   },
   "DependsOn": [
    "MyResumeTaskRoleDefaultPolicy473739CA",
    "MyResumeTaskRoleE50E3365"
   ],
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/MyResumeService/Service/SecurityGroup/from MyResumeClusterStackMyResumeServiceLBSecurityGroupA23F9B2F:5050"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31Sy27jMAz8lt4V7fYB7F7TbBsEKLpGUvRa0DLrsLElQ48UgeF/X0qKa6Mt9sThaCSSQ13J37/kzwt4dwtVHRYNlbLfeVAHwdRL765lfxvUAb1YveqMBoHqSvbPnYrcc7ESRSgbUrtQ6qyb0NYEj09QNjjxE7d0zigCT0Z/iCO42xQxPIJfg8d3OInC0pHh9PBGe7SMR0Hu5JwtPU+wb1F7sUMVLPnT2prQpR7+S9zVFp37Qm904uPkTvarJjiuHlUjvAdbQ5zKHf7gK2kaZ/rMGO2BNNoZd767Q3sklX3KcBAErey3JruXYmHY6TRuRoNoTM09PZj6Y6IRp3ZfOvDRKieXXcc3ktsPBqpbaEArrD6VxwacJ9WwokwK0vWR1/39bZvrzfK5jtgbfdaMeHb+xJV5g2Pbs3QYxBadCTb6wQ6bdkrZiO+PCmuOVMUSzqHnT1xz6 [...]
   },
   "Metadata": {
    "aws:cdk:path": "MyResumeClusterStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Parameters": {
  "ParamParameter": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "open_api_key"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "MyResumeServiceLoadBalancerDNS1C792608": {
   "Value": {
    "Fn::GetAtt": [
     "MyResumeServiceLB4AFC292B",
     "DNSName"
    ]
   }
  },
  "MyResumeServiceServiceURL92572F24": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "MyResumeServiceLB4AFC292B",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "LoadBalancerDNS": {
   "Value": {
    "Fn::GetAtt": [
     "MyResumeServiceLB4AFC292B",
     "DNSName"
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
